--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@
 *, *::before, *::after {
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    color: #333;
-    background-color: rgb(255, 236, 218);
+    --light-primary: rgb(255, 236, 218);
+    --light-secondary: #333;
+    --light-tertiary: #ffaa00;
 }
 
 body {
@@ -12,12 +13,18 @@ body {
     height: 100vh;
     margin: 0 auto;
     padding: 0;
+    background-color: var(--light-primary);
+}
+
+.text {
+    color: var(--light-secondary);
 }
 
 #main {
     margin: 0 auto;
     padding: 0;
     width: 1200px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -42,7 +49,7 @@ body {
     appearance: none;
     width: 72px;
     height: 36px;
-    background: linear-gradient(to left, rgb(252, 155, 28), rgb(255, 228, 140));
+    background: linear-gradient(to left, var(--light-tertiary), rgb(255, 228, 140));
     border-radius: 36px;
     border: 3px solid #bbb;
     transition: .5s;
@@ -70,4 +77,81 @@ body {
     top: 0;
     left: 0;
     transition: .5s;
+}
+
+/* game */
+
+#game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+}
+
+/* SCOREBOARD */
+
+#tracker {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 100px;
+}
+
+.scoreboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 24px;
+}
+
+.name, .points {
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.vs {
+    font-size: 32px;
+}
+
+.icon {
+    width: 100px;
+    height: 100px;
+}
+
+/* buttons */
+
+#button-wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 60px;
+}
+
+.option {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.choice {
+    font-size: 24px;
+}
+
+.button {
+    padding: 0;
+    margin: 0;
+    width: 200px;
+    height: 200px;
+    border: 4px solid var(--light-secondary);
+    background-color: var(--light-primary);
+    border-radius: 20px;
+    transition: .3s;
+}
+
+.button:hover {
+    transform: scale(1.1);
+    border-color: var(--light-tertiary);
+    cursor: pointer;
 }
