--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 }
 
 #mode {
-    padding: 64px;
+    padding: 32px 64px;
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -186,6 +186,7 @@ i {
 /* reset button */
 
 #reset {
+    margin: 0;
     width: 200px;
     height: 100px;
     font-size: 24px;
